# miaoyu

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  biome.json  ci.yml  components.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  publish.yml
scripts/: check-models.ts  download-models.ts
src/: app.css  routeTree.gen.ts  router.tsx  store.ts
src-tauri/: .env.example  Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.ci.conf.json  tauri.conf.json  tauri.prod.conf.json  tauri.prod.macos.json  tauri.prod.windows.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  feedback.rs  history.rs  hotkeys.rs  lib.rs  llm.rs  main.rs  models.rs  mouse_tracker.rs  notification.rs  permissions.rs  settings.rs  tray.rs  windows.rs
src-tauri/src/audio/: dictating.rs  local_models.rs  mod.rs  transcribing.rs
src/components/: audio-wave.tsx  border-beam.tsx  copy-button.tsx  error-boundary.tsx  model-card.tsx  moving-border.tsx  not-found.tsx  shine-border.tsx  timer.tsx
src/components/animate/: switch.tsx
src/components/audio-panel/: close-button.tsx  dictating-view.tsx  idle-view.tsx  index.tsx  stop-button.tsx  transcribing-view.tsx  wave.tsx
src/components/icons/: asr.tsx  bailian.tsx  deepseek.tsx  modelscope.tsx  openai.tsx  qwen.tsx  text.tsx  volcengine.tsx
src/components/radix/: tabs.tsx
src/components/settings/: hotkey.tsx  row.tsx  theme-toggle.tsx
src/components/theme/: provider.tsx  switch.tsx
src/components/ui/: badge.tsx  button-group.tsx  button.tsx  (+8 more)
src/constants/: hotkeys.ts  models.ts
src/hooks/: use-audio-flow.ts  use-auto-height.ts  use-permissions.ts  use-timer.ts
src/lib/: tauri.ts
src/routes/: __root.tsx  feedback.tsx  index.tsx  notification.tsx  onboarding.tsx  recording.tsx  setup.tsx  transcribing.tsx
(+22 files in other folders)
